--- a/cheese.html
+++ b/cheese.html
@@ -6,6 +6,11 @@
    
    
    <body>
+      <p1>
    hi my name is Nirav and I love cheese especialy cheddar cheese
+      </p1>
+      <p2>
+         My dream is to eat the cheese on the moon!!!!
+      </p2>
    </body>
 </html>
